# prey

./: .gitignore  CMakeLists.txt  README.md
cmake/: README.txt  raspberrypi.toolchain.cmake
include/: Accelerometer.h  Accelerometer_GY_521.h  Accelerometer_GY_521_mock.h  Flight_controller.h  Gyroscope.h  Gyroscope_GY_521.h  Gyroscope_GY_521_mock.h  Logger.h  Motor_manager.h  Orientation_manager.h  Prey.h  config.h  prey.h  utils.h
include/Accelerometer/: Accelerometer.h  Accelerometer_GY_521.h  Accelerometer_GY_521_mock.h
include/Barometer/: Barometer.h
include/GPS/: GPS.h  GPS_mock.h
include/Gyroscope/: Gyroscope.h  Gyroscope_GY_521.h  Gyroscope_GY_521_mock.h
script/: 3D_visualisation.py  accel_gyro_visualisation.py  orientation_visualisation.py  test_PID.py
source/: Accelerometer.cpp  Accelerometer_CY_521_mock.cpp.cpp  Accelerometer_GY_521.cpp  Accelerometer_GY_521_mock.cpp  CMakeLists.txt  Flight_controller.cpp  Gyroscope.cpp  Gyroscope_GY_521.cpp  Gyroscope_GY_521_mock.cpp  Logger.cpp  Motor_manager.cpp  Orientation_manager.cpp  Prey.cpp  accel_gyro_visualisation.cpp  main.cpp  orientation_visualisation.cpp  prey.cpp  test_PID.cpp
source/Accelerometer/: Accelerometer.cpp  Accelerometer_GY_521.cpp  Accelerometer_GY_521_mock.cpp
source/Barometer/: Barometer.cpp
source/GPS/: GPS.cpp  GPS_mock.cpp
source/Gyroscope/: Gyroscope.cpp  Gyroscope_GY_521.cpp  Gyroscope_GY_521_mock.cpp
